README contains Trac URL
git-svn-id: https://neuralensemble.org/svn/PyNN/trunk@10 1a7b9c28-352d-0410-8541-c879d6df8dcf

--- a/README
+++ b/README
@@ -21,3 +21,8 @@ svn commit
 
 ** svn commit requires a neuralensemble.org account, or a FACETS
 account with SVN access.
+
+Trac
+****
+
+http://neuralensemble.kip.uni-heidelberg.de/trac/PyNN
