Continued writing doc/highlevel.txt, and improved  the implementation of various methods in the `nest.Projection` class.
git-svn-id: https://neuralensemble.org/svn/PyNN/trunk@66 1a7b9c28-352d-0410-8541-c879d6df8dcf

--- a/doc/README
+++ b/doc/README
@@ -2,7 +2,9 @@
 Notes on PyNN documentation
 ===========================
 
-The text files in this directory (including this one) are in reStructuredText_ format, which can easily be processed into HTML or LaTeX formats using Docutils_.
+The text files in this directory (including this one) are in reStructuredText_ format, which can easily be processed into HTML or LaTeX formats using Docutils_, e.g.::
+
+    $ rst2html.py --initial-header-level=2 highlevelapi.txt > highlevelapi.html
 
 API documentation is generated using the ``wikidoc.py`` script, which can produce MediaWiki, Trac Wiki, or LaTeX formats (but not, currently, reStructuredText).
 
