* Deleted the `facetsml` and `nest2` modules, which are not mature enough to be in the 0.3 release.  * Deleted the `misc` directory, which is of no use to anyone, really.  * Deleted some commented-out code.  * Removed methods that aren't part of the official 0.3 API.
Don't worry - all the deleted stuff is still in the trunk!

git-svn-id: https://neuralensemble.org/svn/PyNN/branches/0.3@77 1a7b9c28-352d-0410-8541-c879d6df8dcf

--- a/README
+++ b/README
@@ -10,11 +10,11 @@ SVN instructions
 
 Fetching the source:
 
-svn co https://neuralensemble.kip.uni-heidelberg.de/svn/PyNN/trunk pyNN  
+svn co https://neuralensemble.kip.uni-heidelberg.de/svn/PyNN/branches/0.3 pyNN  
 
 ** Anonymous checkout is allowed
 
-Commiting Changes:
+Committing Changes:
 
 In the svn dir:
 svn commit
