--- a/doc/README
+++ b/doc/README
@@ -10,7 +10,8 @@ API documentation is generated using the ``wikidoc.py`` script, which can produc
 
 Many of the files contain examples of interactive python sessions. The validity of this code can be tested by running::
 
-    $ python testdocs.py nest
+    $ python testdocs.py nest1
+    $ python testdocs.py nest2
     $ python testdocs.py pcsim
     $ nrnpython testdocs.py neuron
     
