Removed modules that will not be supported in the 0.4 release, i.e. `brian`, `moose`, `neuron2`, `neuroml`, `facetsml`
git-svn-id: https://neuralensemble.org/svn/PyNN/branches/0.4@344 1a7b9c28-352d-0410-8541-c879d6df8dcf

--- a/README
+++ b/README
@@ -10,7 +10,7 @@ SVN instructions
 
 Fetching the source:
 
-svn co https://neuralensemble.org/svn/PyNN pyNN  
+svn co https://neuralensemble.org/svn/PyNN/trunk pyNN  
 
 ** Anonymous checkout is allowed
 
