--- a/changelog
+++ b/changelog
@@ -1,5 +1,5 @@
 =============
-Release 0.5.0 (r???)
+Release 0.5.0 (r652)
 =============
 
 There have been rather few changes to the API in this version, which has
