--- a/test/README
+++ b/test/README
@@ -1,6 +1,50 @@
-* Unit tests:
-$ python nesttests.py > /dev/null
-$ ./nrnpython neurontests.py
+PyNN testing is divided into several different types of test:
+    * checking the API is syntactically consistent between different backends
+    * unit tests
+    * regression tests
+    * system tests
+    * running the example scripts
+    * doctests    
 
-* Regression tests:
-$ ./runtests.py
+
+API syntax consistency
+----------------------
+
+checkAPI.py
+
+
+Unit tests
+----------
+
+In the `unittests` subdirectory. Tests can be run individually, or all at once
+with coverage measurement using `alltests.sh`.
+
+Note that the `generictests.py` script takes the simulator backend as a
+command-line argument.
+
+
+Regression tests
+----------------
+
+Any time there is a bug/defect on the tracker, a script should be added to the
+`regression` subdirectory, so we can check that the problem does not re-occur
+in the future.
+
+
+System tests
+------------
+
+
+
+Running the example scripts
+---------------------------
+
+test_examples.py
+test_examples_mpi.py
+
+
+Documentation tests
+-------------------
+
+Tests that the code examples given in the documentation are correct.
+XXXX
