Working on getting automated system testing (running the same model with lots of different parameters sets on multiple simulators) working again (it worked in 0.4 but was mostly broken in 0.5).
git-svn-id: https://neuralensemble.org/svn/PyNN/trunk@696 1a7b9c28-352d-0410-8541-c879d6df8dcf

--- a/test/README
+++ b/test/README
@@ -34,6 +34,18 @@ in the future.
 System tests
 ------------
 
+These tests compare the output of different simulators for the same script. Each
+test can be run directly by providing a parameter file on the command line,
+e.g.:
+
+python test_synaptic_integration.py parameters/test_synaptic_integration.param neuron nest
+
+or it can be run with many different parameter sets using the explore_space.py
+script, e.g.:
+
+python explore_space.py -n 5 -f ~/mpd.hosts test_synaptic_integration.py parameters/test_synaptic_integration.space neuron nest
+
+
 
 
 Running the example scripts
