Implemented `reset()` and made the behaviour of `setup()` consistent across simulators. Almost all unit tests now pass.
git-svn-id: https://neuralensemble.org/svn/PyNN/trunk@698 1a7b9c28-352d-0410-8541-c879d6df8dcf

--- a/test/README
+++ b/test/README
@@ -22,6 +22,8 @@ with coverage measurement using `alltests.sh`.
 Note that the `generictests.py` script takes the simulator backend as a
 command-line argument.
 
+`generictests.py` should be run both with "python" and with "mpirun python".
+
 
 Regression tests
 ----------------
