Deleted some files that should not be part of the 0.6 branch
git-svn-id: https://neuralensemble.org/svn/PyNN/branches/0.6@710 1a7b9c28-352d-0410-8541-c879d6df8dcf

--- a/changelog
+++ b/changelog
@@ -1,5 +1,5 @@
 ====================
-Release 0.6.0 (r???)
+Release 0.6.0 (r710)
 ====================
 
 There have been three major changes to the API in this version.
